--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "unit": "jest --config test/unit/jest.conf.js --coverage"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "element-ui": "^2.4.5",
     "jquery": "^3.4.1",
     "vue": "^2.5.2",
