--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "echarts": "^4.6.0",
     "element-ui": "^2.4.5",
     "jquery": "^3.4.1",
     "vue": "^2.5.2",
